--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.paicbd</groupId>
     <artifactId>smsc-utils</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-1</version>
     <name>smsc-utils</name>
     <description>Utility Module for SMSC</description>
     <licenses>
